swagger routes and proper swagger on package.json
